Parseador del Xml con los grupos de cuentas del PGC

--- a/.gitignore
+++ b/.gitignore
@@ -310,3 +310,4 @@ paket-files/
 /ContaLibre/Scripts/sammy-0.7.4.min.js
 /ContaLibre/Content/bootstrap.css
 /ContaLibre/Content/bootstrap.min.css
+/Docs/PGC_2007.pdf
