Comienzo a crear los RESTful que la SPA de Angular JS necesitará
Directiva para mostrar una tabla del PGC tal como esté en la base de datos

Voy a usar un sistema de ViewModels en lugar de las propias entidades para evitar referencias ciruclares y adjuntar las cuentas que necesito por cada GrupoN3 como listas. En el modelo de BBDD no puedo poner una lista de cuentas que un Subgrupo de nivel 3 tienen porque hay algunas por defecto en el PGC pero las demás son por usuario

--- a/ContaLibre/ContaLibre.csproj
+++ b/ContaLibre/ContaLibre.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\GruposPgcController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MeController.cs" />
@@ -274,6 +275,7 @@
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\app\contalibre-ng-app.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -1093,6 +1095,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Scripts\version.json" />
+    <Content Include="Views\Cuentas\CuentasView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
