Ahora puede cargar en una tabla (mediante directiva angularjs) los datos de cuentas obtenidos por la Web API a través de servicio AngularJS

--- a/ContaLibre/ContaLibre.csproj
+++ b/ContaLibre/ContaLibre.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GruposPgcController.cs" />
+    <Compile Include="Controllers\GruposPgcViewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MeController.cs" />
@@ -1095,10 +1096,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Scripts\version.json" />
-    <Content Include="Views\Cuentas\CuentasView.cshtml" />
+    <Content Include="Views\GruposPgcView\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\angularjs\" />
+    <Folder Include="Views\Cuentas\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
