--- a/ContaLibre/ContaLibre.csproj
+++ b/ContaLibre/ContaLibre.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CuentasController.cs" />
     <Compile Include="Controllers\GruposPgcController.cs" />
     <Compile Include="Controllers\GruposPgcViewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
