Working on standarizing as many features as possible in base controllers or services

--- a/ContalibreWebApi/ContalibreWebApi.csproj
+++ b/ContalibreWebApi/ContalibreWebApi.csproj
@@ -232,11 +232,22 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ApiControllerBase.cs" />
+    <Compile Include="Controllers\ContabilidadesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709271623082_InitialCreate.cs" />
+    <Compile Include="Migrations\201709271623082_InitialCreate.Designer.cs">
+      <DependentUpon>201709271623082_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710011050022_Mig1.cs" />
+    <Compile Include="Migrations\201710011050022_Mig1.Designer.cs">
+      <DependentUpon>201710011050022_Mig1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Entities\Account.cs" />
@@ -255,6 +266,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Scripts\App\Main\contalibre.js" />
     <Content Include="Scripts\App\Tests\qunit-1.14.0.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -340,6 +352,14 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709271623082_InitialCreate.resx">
+      <DependentUpon>201709271623082_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710011050022_Mig1.resx">
+      <DependentUpon>201710011050022_Mig1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
