--- a/ContalibreWebApi/ContalibreWebApi.csproj
+++ b/ContalibreWebApi/ContalibreWebApi.csproj
@@ -247,6 +247,10 @@
     <Compile Include="Migrations\201710011050022_Mig1.Designer.cs">
       <DependentUpon>201710011050022_Mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710022000401_Mig11.cs" />
+    <Compile Include="Migrations\201710022000401_Mig11.Designer.cs">
+      <DependentUpon>201710022000401_Mig11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -255,6 +259,7 @@
     <Compile Include="Models\Entities\Contabilidad.cs" />
     <Compile Include="Models\Entities\Partida.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ViewModels\ContabilidadViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -359,6 +364,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710011050022_Mig1.resx">
       <DependentUpon>201710011050022_Mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710022000401_Mig11.resx">
+      <DependentUpon>201710022000401_Mig11.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
