Except for edit, CRUD operations have been implemented in a base controller by injecting the appropriate functions from the service
This means it can be used for most CRUD operations with minimum setup

Next, apart from the edit operation, is creating directives to handle showing and modifying data more smoothly, under a standard

--- a/ContalibreWebApi/ContalibreWebApi.csproj
+++ b/ContalibreWebApi/ContalibreWebApi.csproj
@@ -313,6 +313,8 @@
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\App\Auth\auth_angular.js" />
     <Content Include="Scripts\App\Helpers\contalibre_helpers.js" />
+    <Content Include="Scripts\App\Tests\qunit-2.4.0.css" />
+    <Content Include="Scripts\App\Tests\qunit-2.4.0.js" />
     <Content Include="Scripts\App\Tests\test.html" />
     <Content Include="Scripts\App\Tests\tests.js" />
     <Content Include="Scripts\bootstrap.js" />
